--- a/index.html
+++ b/index.html
@@ -2,293 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ayman Al-Mankkadhi - Cybersecurity Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Manrope:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
+    <title>portfolio</title>
   </head>
   <body>
-    <header>
-      <div class="header-background"></div>
-      <div class="container hero">
-        <h1>Ayman Al-Mankkadhi</h1>
-        <p class="tagline">Cybersecurity Undergraduate</p>
-        <p class="bio">
-          Passionate about security engineering and architecture, building
-          secure systems, and mitigating risks. Focused on designing robust
-          security solutions and implementing best practices in access control
-          and cryptography.
-        </p>
-        <div class="contact-links">
-          <a
-            href="https://github.com/Ayman-Abdulgalil"
-            class="contact-link"
-            target="_blank"
-          >
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-              <path
-                d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"
-              />
-            </svg>
-            GitHub
-          </a>
-          <a
-            href="https://www.linkedin.com/in/ayman-al-mankkadhi-19a45435a"
-            class="contact-link"
-            target="_blank"
-          >
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-              <path
-                d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
-              />
-            </svg>
-            LinkedIn
-          </a>
-          <a href="mailto:ayman.29996266.ran@gmail.com" class="contact-link">
-            <svg
-              width="20"
-              height="20"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-            >
-              <path
-                d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
-              />
-              <polyline points="22,6 12,13 2,6" />
-            </svg>
-            Email
-          </a>
-          <button
-            class="cv-button"
-            onclick="
-              alert('Please add your CV file to enable download functionality')
-            "
-          >
-            <svg
-              width="20"
-              height="20"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-            >
-              <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
-              <polyline points="7 10 12 15 17 10" />
-              <line x1="12" y1="15" x2="12" y2="3" />
-            </svg>
-            Download CV
-          </button>
-        </div>
-      </div>
-    </header>
-
-    <main class="container">
-      <!-- Skills Section -->
-      <section id="skills">
-        <h2>Core Competencies</h2>
-        <div class="skills-grid">
-          <div class="skill-category">
-            <h3>// Security Engineering</h3>
-            <p>
-              Designing secure systems with focus on ABAC/RBAC configuration,
-              security architecture, and risk mitigation strategies. Experienced
-              in implementing robust access control mechanisms and
-              security-first design principles.
-            </p>
-          </div>
-          <div class="skill-category">
-            <h3>// Cryptography</h3>
-            <p>
-              Deep knowledge of cryptographic concepts and encryption functions.
-              Hands-on experience implementing various encryption algorithms and
-              security protocols from the ground up.
-            </p>
-          </div>
-          <div class="skill-category">
-            <h3>// Advanced Programming</h3>
-            <p>
-              Strong programming capabilities with expertise in Python and Rust.
-              Experienced in building secure applications, automation tools, and
-              security-focused software solutions.
-            </p>
-          </div>
-          <div class="skill-category">
-            <h3>// Linux Systems</h3>
-            <p>
-              Nearly 2 years of exclusive Arch Linux usage for academic and
-              personal projects. Proficient in system administration, shell
-              scripting, and working in terminal-based environments.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Projects Section -->
-      <section id="projects">
-        <h2>Featured Projects</h2>
-        <div class="projects-grid">
-          <div class="project-card">
-            <div class="project-header">
-              <h3 class="project-title">Secure Drive</h3>
-              <span class="project-status">In Development</span>
-            </div>
-            <p class="project-description">
-              A security-focused cloud-based file storage system designed with
-              security as the primary concern. Features robust access control,
-              encrypted storage, and secure file management capabilities.
-            </p>
-            <div class="project-tech">
-              <span class="tech-tag">FastAPI</span>
-              <span class="tech-tag">PostgreSQL</span>
-              <span class="tech-tag">MinIO</span>
-              <span class="tech-tag">Vite</span>
-              <span class="tech-tag">React</span>
-            </div>
-            <a
-              href="https://github.com/Ayman-Abdulgalil/cloud-storage"
-              class="project-link"
-              target="_blank"
-            >
-              View on GitHub →
-            </a>
-          </div>
-
-          <div class="project-card">
-            <div class="project-header">
-              <h3 class="project-title">CUIMS Scraper</h3>
-              <span class="project-status">Reworking</span>
-            </div>
-            <p class="project-description">
-              Automated web scraper for Chandigarh University's student portal.
-              Handles authentication, CAPTCHA solving via OCR, and extracts
-              student information into structured JSON format.
-            </p>
-            <div class="project-tech">
-              <span class="tech-tag">Python</span>
-              <span class="tech-tag">Selenium</span>
-              <span class="tech-tag">Pytesseract</span>
-              <span class="tech-tag">OCR</span>
-            </div>
-            <a
-              href="https://github.com/Ayman-Abdulgalil/CUIMS-Scraper"
-              class="project-link"
-              target="_blank"
-            >
-              View on GitHub →
-            </a>
-          </div>
-
-          <div class="project-card">
-            <div class="project-header">
-              <h3 class="project-title">HIBP Wrapper</h3>
-              <span class="project-status">Completed</span>
-            </div>
-            <p class="project-description">
-              Intuitive GUI wrapper for the Have I Been Pwned API. Provides a
-              user-friendly interface for checking compromised credentials and
-              data breaches with clean data visualization.
-            </p>
-            <div class="project-tech">
-              <span class="tech-tag">Rust</span>
-              <span class="tech-tag">Slint</span>
-              <span class="tech-tag">API Integration</span>
-            </div>
-            <a
-              href="https://github.com/Ayman-Abdulgalil/hibp_wrapper"
-              class="project-link"
-              target="_blank"
-            >
-              View on GitHub →
-            </a>
-          </div>
-
-          <div class="project-card">
-            <div class="project-header">
-              <h3 class="project-title">ABC Optimizer</h3>
-              <span class="project-status">Completed</span>
-            </div>
-            <p class="project-description">
-              Proof-of-concept implementation of Artificial Bee Colony
-              optimization algorithm. Demonstrates swarm intelligence principles
-              through pure Python implementation.
-            </p>
-            <div class="project-tech">
-              <span class="tech-tag">Python</span>
-              <span class="tech-tag">Algorithm Design</span>
-              <span class="tech-tag">Optimization</span>
-            </div>
-            <a
-              href="https://github.com/Ayman-Abdulgalil/ABC-Optimizer"
-              class="project-link"
-              target="_blank"
-            >
-              View on GitHub →
-            </a>
-          </div>
-        </div>
-      </section>
-
-      <!-- Certificates Section -->
-      <section id="certificates">
-        <h2>Certifications & Education</h2>
-        <div class="certs-grid">
-          <div class="cert-card">
-            <div class="cert-name">
-              Google Cybersecurity Professional Certificate
-            </div>
-            <div class="cert-provider">Google</div>
-          </div>
-          <div class="cert-card">
-            <div class="cert-name">IBM Security Intelligence Engineer</div>
-            <div class="cert-provider">IBM</div>
-          </div>
-          <div class="cert-card">
-            <div class="cert-name">IT Specialist - Cybersecurity</div>
-            <div class="cert-provider">Pearson</div>
-          </div>
-          <div class="cert-card">
-            <div class="cert-name">Networking Essentials</div>
-            <div class="cert-provider">Cisco</div>
-          </div>
-          <div class="cert-card">
-            <div class="cert-name">
-              Scientific Computing with Python (300 hours)
-            </div>
-            <div class="cert-provider">freeCodeCamp</div>
-          </div>
-          <div class="cert-card">
-            <div class="cert-name">Introduction to Psychology</div>
-            <div class="cert-provider">Yale University</div>
-          </div>
-          <div class="cert-card">
-            <div class="cert-name">Learning How to Learn</div>
-            <div class="cert-provider">Deep Teaching Solutions</div>
-          </div>
-        </div>
-
-        <div class="learning-section">
-          <h3>// Currently Pursuing</h3>
-          <div class="learning-list">
-            <div class="learning-item">
-              ISC2 Certified in Cybersecurity (CC)
-            </div>
-            <div class="learning-item">CompTIA Security+</div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <div class="container">
-        <p>&copy; 2026 Ayman Al-Mankkadhi. Built with passion for security.</p>
-      </div>
-    </footer>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
